--- a/.github/workflows/GetInfo.yml
+++ b/.github/workflows/GetInfo.yml
@@ -15,12 +15,11 @@ concurrency:
   cancel-in-progress: false
 jobs:
   apps:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          submodules: recursive
           repository: Onekey-Project/OnekeyPro
           token: ${{ secrets.token }}
       - name: Set up Python 3.10
@@ -29,11 +28,11 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install -r requirements.txt
       - run: |
           git config --local user.name github-actions[bot]
           git config --local user.email 41898282+github-actions[bot]@users.noreply.github.com
-          python main.py -i -P -k ${{ secrets.KEY }}
-          python apps.py -r ${{ github.event.inputs.repo || 'https://github.com/wxy1343/ManifestAutoUpdate' }} -o data
-          python push.py
+          python3 main.py -i -P -k ${{ secrets.KEY }}
+          python3 apps.py -r ${{ github.event.inputs.repo || 'https://github.com/Onekey-Project/OnekeyPro' }} -o data
+          python3 push.py
