--- a/.github/workflows/MergePullRequest.yml
+++ b/.github/workflows/MergePullRequest.yml
@@ -23,11 +23,12 @@ concurrency:
   cancel-in-progress: false
 jobs:
   merge:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          submodules: recursive
           repository: Onekey-Project/OnekeyPro
           token: ${{ secrets.token }}
       - name: Set up Python 3.10
@@ -36,11 +37,11 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - run: |
           git config --local user.name github-actions[bot]
           git config --local user.email 41898282+github-actions[bot]@users.noreply.github.com
-          python3 main.py -i -P -k ${{ secrets.KEY }} -l ${{ github.event.inputs.level || 'INFO' }}
-          python3 merge.py -t ${{ secrets.GITHUB_TOKEN }} -l ${{ github.event.inputs.level || 'INFO' }}
-          python3 push.py
+          python main.py -i -P -k ${{ secrets.KEY }} -l ${{ github.event.inputs.level || 'INFO' }}
+          python merge.py -t ${{ secrets.GITHUB_TOKEN }} -l ${{ github.event.inputs.level || 'INFO' }}
+          python push.py
