--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -29,11 +29,12 @@ concurrency:
   cancel-in-progress: false
 jobs:
   pr:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          submodules: recursive
           repository: Onekey-Project/OnekeyPro
           token: ${{ secrets.token }}
       - name: Set up Python 3.10
@@ -42,9 +43,9 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - run: |
           git config --local user.name github-actions[bot]
           git config --local user.email 41898282+github-actions[bot]@users.noreply.github.com
-          python3 pr.py --repo ${{ github.event.inputs.repo || 'https://github.com/Onekey-Project/OnekeyPro' }} -t ${{ secrets.token }} -l ${{ github.event.inputs.level || 'INFO' }}
+          python pr.py --repo ${{ github.event.inputs.repo || 'https://github.com/Onekey-Project/OnekeyPro' }} -t ${{ secrets.token }} -l ${{ github.event.inputs.level || 'INFO' }}
