--- a/.github/workflows/UpdateManifest.yml
+++ b/.github/workflows/UpdateManifest.yml
@@ -40,11 +40,12 @@ concurrency:
   cancel-in-progress: false
 jobs:
   update:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          submodules: recursive
           repository: Onekey-Project/OnekeyPro
           token: ${{ secrets.token }}
       - name: Set up Python 3.10
@@ -53,9 +54,9 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
       - run: |
           git config --local user.name github-actions[bot]
           git config --local user.email 41898282+github-actions[bot]@users.noreply.github.com
-          python3 main.py -l ${{ github.event.inputs.level || 'INFO' }} -p ${{ github.event.inputs.pool || 8 }} -r ${{ github.event.inputs.retry || 3 }} -t ${{ github.event.inputs.time || 1 }} -k ${{ secrets.KEY }} -u ${{ github.event.inputs.args }}
+          python main.py -l ${{ github.event.inputs.level || 'INFO' }} -p ${{ github.event.inputs.pool || 8 }} -r ${{ github.event.inputs.retry || 3 }} -t ${{ github.event.inputs.time || 1 }} -k ${{ secrets.KEY }} -u ${{ github.event.inputs.args }}
