--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -9,7 +9,7 @@ on:
       repo:
         description: repo
         required: true
-        default: https://github.com/Onekey-Project/OnekeyPro
+        default: https://github.com/skylayer/ManiHub
       level:
         description: Logging Level
         required: true
@@ -48,4 +48,4 @@ jobs:
       - run: |
           git config --local user.name github-actions[bot]
           git config --local user.email 41898282+github-actions[bot]@users.noreply.github.com
-          python pr.py --repo ${{ github.event.inputs.repo || 'https://github.com/Onekey-Project/OnekeyPro' }} -t ${{ secrets.token }} -l ${{ github.event.inputs.level || 'INFO' }}
+          python pr.py --repo ${{ github.event.inputs.repo || 'https://github.com/skylayer/ManiHub' }} -t ${{ secrets.token }} -l ${{ github.event.inputs.level || 'INFO' }}
